# pruv

./: .dockerignore  .gitignore  AGENT_INTEGRATION_BUILD.md  AGENT_VERIFICATION_BUILD.md  CLAUDE.md  DEPLOY.md  Dockerfile  PRUV_AUDIT_AND_REBUILD.md  PRUV_HOMEPAGE_PATCH.md  README.md  XYCHAIN_PRUV_INTEGRATION.md  genesis-hashes.html  pruv-site.html  pyproject.toml  railway.toml  test_security_audit.py
.github/workflows/: publish-pruv.yml  (+2 more)
apps/api/: .gitignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_add_chain_type_scan_results.py
apps/api/app/: main.py
apps/api/app/core/: config.py  dependencies.py  rate_limit.py  security.py
apps/api/app/middleware/: __init__.py  cors.py  logging.py
apps/api/app/models/: database.py
apps/api/app/routes/: admin.py  analytics.py  auth.py  chains.py  checkpoints.py  dashboard.py  identity.py  provenance.py  receipts.py  scans.py  verify.py  webhooks.py
apps/api/app/schemas/: schemas.py
apps/api/app/services/: alerts.py  analytics_service.py  auth_service.py  chain_service.py  checkpoint_service.py  identity_service.py  provenance_service.py  receipt_html.py  receipt_service.py  scan_service.py  verification_service.py  webhook_service.py
apps/api/tests/: test_alerts.py  test_api.py  test_e2e_dashboard_flows.py  test_load.py  test_payments.py  test_production.py  test_scans.py  test_security.py  test_write_scope.py
docs/: build-identity-provenance-v2.md  build-identity-provenance.md  how-pruv-works.md  introduction.mdx  mint.json
(+138 files in other folders)
