[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pruv-api"
version = "1.0.0"
description = "pruv API backend — api.pruv.dev"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "PyJWT>=2.8",
    "httpx>=0.25.0",
    "xycore>=1.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
prod = [
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "stripe>=7.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
